build: Silence errorprone reflection warnings